--- a/scripts/jupyterQR.ipynb
+++ b/scripts/jupyterQR.ipynb
@@ -95,9 +95,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dataPy",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "datapy"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
