--- a/scripts/houseClaening.ipynb
+++ b/scripts/houseClaening.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -11,16 +11,6 @@
      "text": [
       "435.0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "244"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -78,21 +68,51 @@
     "#data[\"total_bedrooms\"]\n",
     "# %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
     "# Imputing data\n",
-    "#media coul be replaced with any other operation value (min,max,mean,etc)\n",
+    "#media could be replaced with any other operation value (min,max,mean,etc)\n",
     "median = data[\"total_bedrooms\"].median()\n",
     "print(median)\n",
     "# Llena los NA con la mediana previamente calculada, False es para tomar el data_set original\n",
     "data[\"total_bedrooms\"].fillna(median, inplace=False)\n",
     "#Contar las celas que quedron con el valor de la mediana\n",
     "sum(data[\"total_bedrooms\"]==median)\n",
-    "# Create Imputer Object\n",
-    "imputer = SimpleImputer(strategy=\"median\")\n",
+    "# %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
     "# Create a dataframe without the categorical column\n",
     "housingNum = data.drop(\"ocean_proximity\", axis=1)\n",
+    "# Create Imputer Object\n",
+    "imputer = SimpleImputer(strategy=\"median\")\n",
+    "\n",
+    "\n",
     "# Fit the imputer to the new dataframe\n",
     "imputer.fit(housingNum)\n",
-    "imputer.statistics_\n",
-    "housingNum.median().values\n"
+    "#imputer.statistics_\n",
+    "#housingNum.median().values\n",
+    "# Impute our dataframe (returns a numpy array)\n",
+    "impArray = imputer.transform(housingNum)\n",
+    "# Convert back into a dataframe\n",
+    "colNames = housingNum.columns\n",
+    "housingTr = pd.DataFrame(impArray, columns=colNames)\n",
+    "housingTr\n",
+    "# %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "# Categorical\n",
+    "housingCat = data[\"ocean_proximity\"]\n",
+    "housingCat.head(10)\n",
+    "(housingCatEncoded, housingCatCategories) = housingCat.factorize()\n",
+    "housingCatCategories\n",
+    "\n",
+    "encoder = OneHotEncoder(categories=\"auto\", sparse=False)\n",
+    "housingCatT = housingCat.values.reshape(-1, 1)\n",
+    "housingCatOne = encoder.fit_transform(housingCatT)\n",
+    "housingCatOne\n",
+    "encoder.categories_\n",
+    "# %%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "# Put Data Frame together\n",
+    "cleanDataset=housingTr\n",
+    "encodedDataframe = pd.DataFrame(\n",
+    "    housingCatOne,\n",
+    "    columns=list(encoder.categories_[0])\n",
+    ")\n",
+    "cleanDataset = cleanDataset.join(encodedDataframe)\n",
+    "cleanDataset.to_csv(\"../data/extracted/housing/cleanDataset.csv\")"
    ]
   }
  ],
